# Solana-Pokemon-cNFT-Marketplace

./: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  SETUP.md  package.json  tsconfig.json
backend/: package.json
backend/src/: db.ts  index.ts
backend/src/models/: Pokemon.ts
backend/src/routes/: evolution.ts  metadata.ts  pokemon.ts
backend/src/services/: metadata.ts
backend/src/types/: index.ts
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/mint/: page.tsx
frontend/components/: WalletProvider.tsx
frontend/idl/: pokemon_marketplace.json
frontend/lib/: api.ts  solana.ts
programs/pokemon_marketplace/: Cargo.toml
programs/pokemon_marketplace/src/: lib.rs
scripts/: deploy.ts  initialize-marketplace.ts
tests/: pokemon-marketplace.ts
